--- a/www/custom.css
+++ b/www/custom.css
@@ -28,3 +28,8 @@
   border: none;
   width: 50px;
 }
+
+.hint--no-arrow::after {
+  background-color: #575656d0 !important; 
+  font-size: 12px !important; 
+}
